# gem5sc

./: CMakeLists.txt  DESIGN.md  DESIGN_config.md  DESIGN_creditstream.md  DESIGN_extension.md  DESIGN_hierarcy.md  DESIGN_layout.md  DESIGN_port.md  DESIGN_port_link.md  PLAN.md  README.md  build.sh
configs/: arbiter.json  base.json  cpu_example.json  cpu_group.json  cpu_multi_direct.json  cpu_router_hash.json  cpu_sharedcache.json  cpu_simple.json  crossbar_m2m.json  noc.json  noc_mesh.json  ring_bus.json  router.json  stream_arbiter.json  stream_example.json  stream_gen.json  stream_router.json  tg_arbiter.json  tg_cache_mem.json  tg_crossbar.json  tg_example.json  tg_router.json
configs/example_hierarchy/: chip.json  node.json  system.json
configs/example_layout/: manual.json  mesh_grid.json  pipeline_auto.json  ring_radial.json
docs/: EXAMPLE_MODULE.md  STATS.md
include/: config_loader.hh  credit_pool.hh  event_queue.hh  master_port.hh  module_factory.hh  modules.hh  packet.hh  port_manager.hh  port_stats.hh  sim_core.hh  sim_module.hh  sim_object.hh  simple_port.hh  slave_port.hh  virtual_channel.hh
include/extensions/: coherence_extension.hh  performance_extension.hh  prefetch_extension.hh  qos_extension.hh
include/modules/: arbiter.hh  cache_sim.hh  cpu_cluster.hh  cpu_sim.hh  credit_flow.hh  crossbar.hh  crossbar_rr.hh  memory_sim.hh  router.hh  router_hash.hh  stream_consumer.hh  stream_modules.hh  stream_producer.hh  stream_traffic_gen.hh  traffic_gen.hh
include/utils/: config_utils.hh  dynamic_loader.hh  force_directed_layout.hh  json_includer.hh  module_group.hh  regex_matcher.hh  topology_dumper.hh  wildcard.hh
samples/: CMakeLists.txt
samples/simple1/: CMakeLists.txt
samples/simple1/configs/: cpu_cluster.json  mem_cluster.json  top.json
samples/simple1/modules/: cpu_cluster.cc  cpu_cluster.hh  mem_cluster.cc  mem_cluster.hh
samples/simple_hier/: CMakeLists.txt  main.cpp
samples/simple_hier/configs/: cpu_cluster.json  noc_tile.json  system.json
samples/simple_hier/src/: cpu_cluster.cc  noc_tile.cc
src/: cpu_main.cpp  main.cpp  main_hierarchy.cpp  main_layout.cpp  module_factory.cpp  traffic_main.cpp
src/core/: module_factory.cc
src/utils/: dynamic_loader.cc
test/: CMakeLists.txt  README.md  mock_modules.hh  test_config_loader.cc  test_connection_resolution.cc  test_credit_flow.cc  test_end_to_end_delay.cc  test_json_includer.cc  test_latency_injection.cc  test_layout_styles.cc  test_module_group.cc  test_module_registration.cc  test_regex_matching.cc  test_response_path.cc  test_stats_accuracy.cc  test_valid_only.cc  test_valid_ready.cc  test_virtual_channel.cc  test_wildcard_matching.cc
